--- a/basics/package.json
+++ b/basics/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0"
+  },
+  "dependencies": {
+    "graphql-yoga": "^1.18.3"
   }
 }
